[package]
name = "nvim-test-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.117"
serde = { version = "1.0.202", features = ["derive"] }
glob = "0.3.1"
log = "0.4.21"
log4rs = { version = "1.3.0", features = ["file_appender"] }
log-panics = "2.1.0"
rayon = "1.10.0"
indoc = "2.0.5"
ansi_term = "0.12"